feat: complete P1 blockchain hardening